--- a/src/game.html
+++ b/src/game.html
@@ -57,7 +57,7 @@
             <div id="controls-cp" class="controlcont borderright">
                 <div>
                     <h3 class="center">Balance</h3>
-                    <h1 id="balance">1000.00</h1>
+                    <h1 id="balance">10000.00</h1>
                 </div>
                 <div>
                     <h3 class="center">Current Stock Price</h3>
@@ -66,6 +66,21 @@
                 <div>
                     <h3 class="center">Stocks Owned</h3>
                     <h1 id="so">0</h1>
+                </div>
+            </div>
+
+            <div id="controls-cp" class="controlcont borderright">
+                <div>
+                    <h3 class="center">Time Left</h3>
+                    <h1 id="timer"></h1>
+                </div>
+                <div>
+                    <h3 class="center">Profit</h3>
+                    <h1 id="p"></h1>
+                </div>
+                <div>
+                    <h3 class="center">% Profit</h3>
+                    <h1 id="pp"></h1>
                 </div>
             </div>
 
@@ -81,6 +96,6 @@
 
 <script src="scripts/level scripts/lv1.js"></script>
 <script> 
-    
+
 </script>
 </html>
