--- a/src/sim.html
+++ b/src/sim.html
@@ -57,7 +57,7 @@
             <div id="controls-cp" class="controlcont borderright">
                 <div>
                     <h3 class="center">Balance</h3>
-                    <h1 id="balance">1000.00</h1>
+                    <h1 id="balance">10000.00</h1>
                 </div>
                 <div>
                     <h3 class="center">Current Stock Price</h3>
@@ -66,6 +66,17 @@
                 <div>
                     <h3 class="center">Stocks Owned</h3>
                     <h1 id="so">0</h1>
+                </div>
+            </div>
+
+            <div id="controls-cp" class="controlcont borderright">
+                <div>
+                    <h3 class="center">Profit</h3>
+                    <h1 id="p"></h1>
+                </div>
+                <div>
+                    <h3 class="center">% Profit</h3>
+                    <h1 id="pp"></h1>
                 </div>
             </div>
 
@@ -79,4 +90,9 @@
 <script src="scripts/stock_game.js"></script>
 <script src="scripts/data.js"></script>
 
+<script> 
+    window.onload = function() {
+        addMessage(0, "If you have any queries, I'm on standby to help");
+    };
+</script>
 </html>
