--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <button class="btn home">HOME</button>
         <button class="btn game" onclick="window.location.href='./lvlsel.html'">GAME</button>
         <button class="btn virtual-trading" onclick="window.location.href='./sim.html'">VIRTUAL TRADING</button>
-        <button class="btn finnect">FINNECT</button>
+        <button class="btn finnect" onclick="window.location.href='./finnect.html'">FINNECT</button>
         <button class="btn trading" onclick="window.location.href='./trade.html'">TRADING</button>
         <button class="btn contact">Contact Us</button>
     </div>
