--- a/src/game.html
+++ b/src/game.html
@@ -51,7 +51,7 @@
 
             <div id="controls-cs" class="controlcont borderright">
                 <h3 class="center">Chart Settings</h3>
-                <button class="togglebutton" id="rsi" onclick="togglecontrol('rsi')"> <b><h3>RSI</h3></b></button>
+                <button class="togglebutton active" id="rsi" onclick="togglecontrol('rsi')"> <b><h3>RSI</h3></b></button>
             </div>
 
             <div id="controls-cp" class="controlcont borderright">
@@ -79,7 +79,7 @@
                     <h1 id="p"></h1>
                 </div>
                 <div>
-                    <h3 class="center">% Profit</h3>
+                    <h3 class="center">Net Worth</h3>
                     <h1 id="pp"></h1>
                 </div>
             </div>
