--- a/src/sim.html
+++ b/src/sim.html
@@ -75,7 +75,7 @@
                     <h1 id="p"></h1>
                 </div>
                 <div>
-                    <h3 class="center">% Profit</h3>
+                    <h3 class="center">Net Worth</h3>
                     <h1 id="pp"></h1>
                 </div>
             </div>
