--- a/src/trade.html
+++ b/src/trade.html
@@ -9,7 +9,7 @@
 <body>
     <img src="src/image.jpg" class="lock">
     <div class="popup">
-      <h2>Trading is just a DMAT account away.</h2>
+      <h2>Trading is just a DEMAT account away.</h2>
       <p>Click here to  <a href="login.html">Login</a>  or  <a href="signup.html">Sign Up</a></p>
     </div>
   <script src="scripts/t_script.js"></script>
